Patching in various changes and optimisations:
Support for Object.freeze()/Object.isFrozen()
Optimisations:
  ESNumber uses Longs where it can
  Reduce number of hash maps generated
  Use a heavily optimised string appender